# fakeredis-py

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  REDIS_COMMANDS.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  dependabot.yml  release-drafter.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  publish-documentation.yml  publish-pypi.yml  publish.yml  release.yml  test-compare-server.yml  test-dragonfly.yml  test-no-matrix.yml  test.yml  text-no-matrix.yml
about/changelog/: index.html
about/contributing/: index.html
about/license/: index.html
docs/: ads.txt  dragonfly-support.md  index.md  redis-stack.md  requirements.txt  valkey-support.md
docs/about/: changelog.md  contributing.md  license.md
docs/guides/: implement-command.md  test-case.md
docs/overrides/: main.html
docs/redis-commands/: Redis.md  RedisBloom.md  RedisGraph.md  RedisJson.md  RedisSearch.md  RedisTimeSeries.md  implemented_commands.md  index.md  unimplemented_commands.md
docs/supported-commands/: DRAGONFLY.md  index.md
dragonfly-support/: index.html
fakeredis/: __init__.py  _acl.py  _aioredis2.py  _async.py  _basefakeluasupport.py  _basefakesocket.py  _client_setup.py  _client_types.py  _command_args_parsing.py  _command_info.py  _commands.py  _connection.py  _fakeluasocket.py  _fakesocket.py  _helpers.py  _msgs.py  _server.py  _stream.py  _tcp_server.py  _typing.py  _valkey.py  _zset.py  aioredis.py  commands.json  tcp_server.py  typing.py
fakeredis/commands_mixins/: __init__.py  _generic_mixin.py  _hash_mixin.py  _mixin_base.py  acl_mixin.py  array_mixin.py  bitmap_mixin.py  connection_mixin.py  generic_mixin.py  geo_mixin.py  hash_mixin.py  json_mixin.py  list_mixin.py  pubsub_mixin.py  scripting_mixin.py  server_mixin.py  set_mixin.py  sortedset_mixin.py  streams_mixin.py  string_mixin.py  transactions_mixin.py
fakeredis/geo/: __init__.py  geohash.py  haversine.py
fakeredis/model/: __init__.py  _acl.py  _array.py  _base_type.py  _client_info.py  _cms.py  _command_info.py  _cuckoo_filter.py  _expiring_members_set.py  _filters.py  _hash.py  _stream.py  _tdigest.py  _timeseries_model.py  _topk.py  _vectorset.py  _zset.py
fakeredis/server_specific_commands/: dragonfly_mixin.py
fakeredis/stack/: __init__.py  _bf_mixin.py  _cf_mixin.py  _cms_mixin.py  _json_mixin.py  _tdigest.py  _tdigest_mixin.py  _time_series_mixin.py  _timeseries_mixin.py  _timeseries_model.py  _topk_mixin.py  _vectorset_mixin.py
guides/implement-command/: index.html
guides/test-case/: index.html
overrides/: main.html
overrides/partials/: toc-item.html
redis-commands/: index.html
redis-commands/Redis/: index.html
redis-commands/RedisBloom/: index.html
redis-commands/RedisGraph/: index.html
redis-commands/RedisJson/: index.html
redis-commands/RedisSearch/: index.html
redis-commands/RedisTimeSeries/: index.html
redis-conf/: redis-stack.conf  users.acl
redis-stack/: index.html
scripts/: create_issues.py  generate_command_info.py  generate_supported_commands_doc.py  supported.py  supported2.py
search/: search_index.json
supported-commands/: index.html
supported-commands/DRAGONFLY/: index.html
test/: conftest.py  test_aioredis1.py  test_aioredis2.py  test_asyncredis.py  test_bitmap_commands.py  test_connection.py  test_extract_args.py  test_fakeredis.py  test_fakeredis6.py  test_fakeredis7.py  test_general.py  test_generic_commands.py  test_hash_commands.py  test_hypothesis.py  test_hypothesis_joint.py  test_init_args.py  test_json_commands.py  test_list_commands.py  test_lua.py  test_lua_modules.py  test_mock.py  test_patch_redis.py  test_pubsub_commands.py  test_redis2_only.py  test_redis4_plus.py  test_redis_asyncio.py  test_redispy2_only.py  test_redispy4_plus.py  test_scan.py  test_scripting.py  test_scripting_lua_only.py  test_server_commands.py  test_set_commands.py  test_singleton.py  test_sorted_set_cmds.py  test_sortedset_commands.py  test_string_commands.py  test_subkey_notifications.py  test_transactions.py  test_transactions_commands.py  (+2 more)
test/json/: test_json.py  test_json_commands.py  test_json_get.py  test_json_set.py
test/test_async/: test_asyncredis.py  test_blocking.py  test_redis_only.py  test_scripts.py
test/test_bf/: test_bloomfilter.py
test/test_dragonfly/: test_bitmap_commands_dragonfly.py  test_saddex.py
test/test_hypothesis/: __init__.py  _server_info.py  base.py  conftest.py  test_connection.py  test_hash.py  test_hypothesis_joint.py  test_joint.py  test_list.py  test_server.py  test_set.py  test_string.py  test_transaction.py  test_zset.py
test/test_internals/: test_acl_save_load.py  test_async_connection.py  test_asyncredis.py  test_extract_args.py  test_init_args.py  test_lua_modules.py  test_pipeline_internals.py  test_typing_imports.py  test_xstream.py
test/test_json/: test_json.py  test_json_arr_commands.py  test_json_commands.py
test/test_mixins/: test_acl_commands.py  test_array_commands.py  test_bitmap_commands.py  test_bitmap_commands_dragonfly.py  test_connection.py  test_connection_commands.py  test_generic_commands.py  test_generic_mixin.py  test_generic_scan_commands.py  test_geo_commands.py  test_hash_commands.py  test_hash_expire_commands.py  test_hash_expire_redispy6.py  test_keyspace_notifications.py  test_list_commands.py  test_pubsub_commands.py  test_redis6.py  test_redis_8_4.py  test_scan.py  test_scripting.py  test_scripting_commands.py  test_server_commands.py  test_set_commands.py  test_sortedset_commands.py  test_sortedset_zadd.py  test_streams_commands.py  test_string_commands.py  test_transactions_commands.py  test_vset.py  test_zadd.py
test/test_stack/: test_bloom_redis_py.py  test_bloomfilter.py  test_cms.py  test_cuckoofilter.py  test_json.py  test_json_commands.py  test_json_fpha.py  test_tdigest.py  test_timeseries.py  (+3 more)
valkey-support/: index.html
(+128 files in other folders)
