[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fakeredis"
version = "2.30.0"
description = "Python implementation of redis API, can be used for testing purposes."
authors = [
    { name = "Daniel Moran", email = "daniel@moransoftware.ca" },
    { name = "Bruce Merry", email = "bmerry@ska.ac.za" },
    { name = "James Saryerwinnie", email = "js@jamesls.com" },
]
requires-python = "~=3.7"
readme = "README.md"
license = "BSD-3-Clause"
maintainers = [{ name = "Daniel Moran", email = "daniel@moransoftware.ca" }]
keywords = [
    "redis",
    "RedisJson",
    "RedisBloom",
    "RedisTimeSeries",
    "testing",
    "redis-stack",
    "valkey",
    "dragonfly",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "redis>=4 ; python_version < '3.8'",
    "redis>=4.3 ; python_version > '3.8'",
    "sortedcontainers>=2,<3",
    "typing-extensions~=4.7 ; python_version < '3.11'",
]

[project.optional-dependencies]
lua = ["lupa>=2.1,<3.0"]
json = ["jsonpath-ng~=1.6"]
bf = ["pyprobables>=0.6"]
cf = ["pyprobables>=0.6"]
probabilistic = ["pyprobables>=0.6"]

[project.urls]
Homepage = "https://github.com/cunla/fakeredis-py"
Repository = "https://github.com/cunla/fakeredis-py"
Documentation = "https://fakeredis.moransoftware.ca/"
"Bug Tracker" = "https://github.com/cunla/fakeredis-py/issues"
Funding = "https://github.com/sponsors/cunla"

[dependency-groups]
dev = [
    "ruff>=0.11 ; python_version >= '3.10'",
    "mypy>=1.15 ; python_version >= '3.10'",
    "pre-commit~=4.2 ; python_version >= '3.10'",
]
test = [
    "coverage~=7.6 ; python_version >= '3.9'",
    "pytest~=8.3 ; python_version >= '3.9'",
    "hypothesis~=6.111 ; python_version >= '3.9'",
    "pytest-timeout>=2.3.1,<3 ; python_version >= '3.9'",
    "pytest-asyncio>=0.24,<0.25 ; python_version >= '3.9'",
    "pytest-cov~=6.0 ; python_version >= '3.9'",
    "pytest-mock~=3.14 ; python_version >= '3.9'",
    "pytest-html~=4.1 ; python_version >= '3.9'",
]
docs = [
    "python-dotenv>=1,<2 ; python_version >= '3.10'",
    "pygithub~=2.3 ; python_version >= '3.10'",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
    "docs",
]

[tool.hatch.build.targets.sdist]
include = [
    "fakeredis",
    "LICENSE",
    "test",
]

[tool.hatch.build.targets.wheel]
include = [
    "fakeredis",
    "LICENSE",
]

[tool.hatch.build.targets.wheel.sources]
LICENSE = "fakeredis/LICENSE"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fake: run tests only with fake redis",
    "real: run tests with a locally running real Redis server",
    "disconnected",
    "min_server",
    "max_server",
    "decode_responses",
    "unsupported_server_types",
    "resp2_only: run tests only with RESP2",
    "resp3_only: run tests only with RESP3",
]
asyncio_mode = "strict"
generate_report_on_test = true

[tool.mypy]
packages = ['fakeredis', ]
strict = true
follow_imports = "silent"
ignore_missing_imports = true
scripts_are_modules = true
check_untyped_defs = true

[tool.ruff]
line-length = 120
exclude = [
    '.venv',
    '__pycache__',
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
